k8s/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: stackoverflow
  labels:
    app.kubernetes.io/name: stackoverflow
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  ports:
    - port: 1433
      targetPort: 1433
      protocol: TCP
      name: sql
  selector:
    app: sqlserver
